<?xml version="1.0"?>
<package format="3">
  <name>scan_tcp_bridge</name>
  <version>1.0.0</version>
  <description>Receives Luckfox SCN1 TCP binary frames and publishes LaserScan.</description>
  <maintainer email="maintainer@example.com">SLAM Maintainer</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
